// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretsOps createSecretsExportTemplate() 1: Return template with meta data 1`] = `
{
  "meta": {
    "exportDate": Any<String>,
    "exportTool": "frodo",
    "exportToolVersion": "v2.0.0-trivir.2 [v18.12.1]",
    "exportedBy": undefined,
    "origin": "https://openam-frodo-dev.forgeblocks.com/am",
    "originAmVersion": undefined,
  },
  "secrets": {},
}
`;

exports[`SecretsOps exportSecret() 1: Export secret1 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-frodo-test-secret-1": {
      "_id": "esv-frodo-test-secret-1",
      "activeVersion": "1",
      "description": "description1",
      "encoding": "generic",
      "lastChangeDate": "2023-08-24T14:17:43.637Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`SecretsOps exportSecret() 2: Export secret2 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-frodo-test-secret-2": {
      "_id": "esv-frodo-test-secret-2",
      "activeVersion": "1",
      "description": "description2",
      "encoding": "generic",
      "lastChangeDate": "2023-08-24T14:17:44.868Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": false,
    },
  },
}
`;

exports[`SecretsOps exportSecrets() 1: Export all secrets 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-admin-token": {
      "_id": "esv-admin-token",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2022-08-11T22:32:38.056Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-admin-token-1999386457729": {
      "_id": "esv-admin-token-1999386457729",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2023-05-14T01:07:41.970Z",
      "lastChangedBy": "8d9723a9-a439-4cbf-beb4-30e52811789d",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-frodo-test-secret-1": {
      "_id": "esv-frodo-test-secret-1",
      "activeVersion": "1",
      "description": "description1",
      "encoding": "generic",
      "lastChangeDate": "2023-08-24T14:17:43.637Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    "esv-frodo-test-secret-2": {
      "_id": "esv-frodo-test-secret-2",
      "activeVersion": "1",
      "description": "description2",
      "encoding": "generic",
      "lastChangeDate": "2023-08-24T14:17:44.868Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": false,
    },
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
    "esv-test-secret-1": {
      "_id": "esv-test-secret-1",
      "activeVersion": "1",
      "description": "test secret one",
      "encoding": "generic",
      "lastChangeDate": "2023-08-06T03:53:17.716Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;
